rhai/codegen/ui_tests/rhai_fn_rename_collision_oneattr.stderr
error: duplicate Rhai signature for 'foo'
  --> $DIR/rhai_fn_rename_collision_oneattr.rs:17:12
   |
17 |     pub fn foo(input: Point) -> bool {
   |            ^^^

error: duplicated function 'foo'
  --> $DIR/rhai_fn_rename_collision_oneattr.rs:12:15
   |
12 |     #[rhai_fn(name = "foo")]
   |               ^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_rename_collision_oneattr.rs:27:8
   |
27 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
